...
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Language" } },
        "ru" : { "stringUnit" : { "state" : "translated", "value" : "Язык" } }
      }
    },
    "settings.open" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Settings…" } },
        "ru" : { "stringUnit" : { "state" : "translated", "value" : "Настройки…" } }
      }
    },
    "settings.language.system" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "System Default" } },
        "ru" : { "stringUnit" : { "state" : "translated", "value" : "Системный" } }
      }
    },
    "settings.language.english" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "English" } },
        "ru" : { "stringUnit" : { "state" : "translated", "value" : "English" } }
      }
    },
    "settings.language.russian" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Russian" } },
...
